--- a/qtdbus/CMakeLists.txt
+++ b/qtdbus/CMakeLists.txt
@@ -10,7 +10,6 @@ IF(CMAKE_CXX_FLAGS MATCHES "-fvisibility")
     ADD_DEFINITIONS(-DGCC_VISIBILITY)
 ENDIF(CMAKE_CXX_FLAGS MATCHES "-fvisibility")
 
-# kde4_add_library(smokeqtdbus SHARED ${smokeqtdbus_LIB_SRCS})
 add_library(smokeqtdbus SHARED ${smokeqtdbus_LIB_SRCS})
 
 target_link_libraries(smokeqtdbus
@@ -21,9 +20,9 @@ target_link_libraries(smokeqtdbus
 
 set_target_properties(smokeqtdbus
     PROPERTIES
-    VERSION 3.0.0
-    SOVERSION 3
-    CXX_STANDARD 11
+    VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}
+    SOVERSION ${VERSION_MAJOR}
+    CXX_STANDARD 14
 )
 
 install(TARGETS smokeqtdbus LIBRARY DESTINATION ${LIB_INSTALL_DIR}
@@ -31,14 +30,13 @@ install(TARGETS smokeqtdbus LIBRARY DESTINATION ${LIB_INSTALL_DIR}
     RUNTIME DESTINATION bin)
 
 if (WIN32)
-	# Realign the stack, for compatibility with an older ABI.
-	if(CMAKE_COMPILER_IS_GNUCXX)
-		set_target_properties(smokeqtdbus PROPERTIES COMPILE_FLAGS -mstackrealign)
-	endif()
+    # Realign the stack, for compatibility with an older ABI.
+    if (CMAKE_COMPILER_IS_GNUCXX)
+	set_target_properties(smokeqtdbus PROPERTIES COMPILE_FLAGS -mstackrealign)
+    endif()
 
     # Get rid of the "lib" prefix on archives/DLLs in Windows.
-    set_target_properties(smokeqtdbus
-        PROPERTIES PREFIX "" IMPORT_PREFIX "")
+    set_target_properties(smokeqtdbus PROPERTIES PREFIX "" IMPORT_PREFIX "")
 endif (WIN32)
 
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/../qtdbus_smoke.h DESTINATION include/smoke)
