--- a/qtquick/CMakeLists.txt
+++ b/qtquick/CMakeLists.txt
@@ -10,7 +10,6 @@ IF(CMAKE_CXX_FLAGS MATCHES "-fvisibility")
     ADD_DEFINITIONS(-DGCC_VISIBILITY)
 ENDIF(CMAKE_CXX_FLAGS MATCHES "-fvisibility")
 
-# kde4_add_library(smokeqtquick SHARED ${smokeqtquick_LIB_SRCS})
 add_library(smokeqtquick SHARED ${smokeqtquick_LIB_SRCS})
 
 target_link_libraries(smokeqtquick
@@ -27,9 +26,9 @@ target_link_libraries(smokeqtquick
 
 set_target_properties(smokeqtquick
     PROPERTIES
-    VERSION 3.0.0
-    SOVERSION 3
-    CXX_STANDARD 11
+    VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}
+    SOVERSION ${VERSION_MAJOR}
+    CXX_STANDARD 14
 )
 
 install(TARGETS smokeqtquick LIBRARY DESTINATION ${LIB_INSTALL_DIR}
@@ -37,14 +36,13 @@ install(TARGETS smokeqtquick LIBRARY DESTINATION ${LIB_INSTALL_DIR}
     RUNTIME DESTINATION bin)
 
 if (WIN32)
-	# Realign the stack, for compatibility with an older ABI.
-	if(CMAKE_COMPILER_IS_GNUCXX)
-		set_target_properties(smokeqtquick PROPERTIES COMPILE_FLAGS -mstackrealign)
-	endif()
+    # Realign the stack, for compatibility with an older ABI.
+    if (CMAKE_COMPILER_IS_GNUCXX)
+	set_target_properties(smokeqtquick PROPERTIES COMPILE_FLAGS -mstackrealign)
+    endif()
 
     # Get rid of the "lib" prefix on archives/DLLs in Windows.
-    set_target_properties(smokeqtquick
-        PROPERTIES PREFIX "" IMPORT_PREFIX "")
+    set_target_properties(smokeqtquick PROPERTIES PREFIX "" IMPORT_PREFIX "")
 endif (WIN32)
 
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/../qtquick_smoke.h DESTINATION include/smoke)
