--- a/qtwebenginecore/CMakeLists.txt
+++ b/qtwebenginecore/CMakeLists.txt
@@ -21,9 +21,9 @@ target_link_libraries(smokeqtwebenginecore
 
 set_target_properties(smokeqtwebenginecore
     PROPERTIES
-    VERSION 3.0.0
-    SOVERSION 3
-    CXX_STANDARD 11
+    VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}
+    SOVERSION ${VERSION_MAJOR}
+    CXX_STANDARD 14
 )
 
 install(TARGETS smokeqtwebenginecore LIBRARY DESTINATION ${LIB_INSTALL_DIR}
@@ -31,10 +31,10 @@ install(TARGETS smokeqtwebenginecore LIBRARY DESTINATION ${LIB_INSTALL_DIR}
     RUNTIME DESTINATION bin)
 
 if (WIN32)
-	# Realign the stack, for compatibility with an older ABI.
-	if(CMAKE_COMPILER_IS_GNUCXX)
-		set_target_properties(smokeqtwebenginecore PROPERTIES COMPILE_FLAGS -mstackrealign)
-	endif()
+    # Realign the stack, for compatibility with an older ABI.
+    if (CMAKE_COMPILER_IS_GNUCXX)
+	set_target_properties(smokeqtwebenginecore PROPERTIES COMPILE_FLAGS -mstackrealign)
+    endif()
 
     # Get rid of the "lib" prefix on archives/DLLs in Windows.
     set_target_properties(smokeqtwebenginecore PROPERTIES PREFIX "" IMPORT_PREFIX "")
