--- a/qtwebenginewidgets/CMakeLists.txt
+++ b/qtwebenginewidgets/CMakeLists.txt
@@ -22,9 +22,9 @@ target_link_libraries(smokeqtwebenginewidgets
 
 set_target_properties(smokeqtwebenginewidgets
     PROPERTIES
-    VERSION 3.0.0
-    SOVERSION 3
-    CXX_STANDARD 11
+    VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}
+    SOVERSION ${VERSION_MAJOR}
+    CXX_STANDARD 14
 )
 
 install(TARGETS smokeqtwebenginewidgets LIBRARY DESTINATION ${LIB_INSTALL_DIR}
@@ -32,10 +32,10 @@ install(TARGETS smokeqtwebenginewidgets LIBRARY DESTINATION ${LIB_INSTALL_DIR}
     RUNTIME DESTINATION bin)
 
 if (WIN32)
-	# Realign the stack, for compatibility with an older ABI.
-	if(CMAKE_COMPILER_IS_GNUCXX)
-		set_target_properties(smokeqtwebenginewidgets PROPERTIES COMPILE_FLAGS -mstackrealign)
-	endif()
+    # Realign the stack, for compatibility with an older ABI.
+    if (CMAKE_COMPILER_IS_GNUCXX)
+	set_target_properties(smokeqtwebenginewidgets PROPERTIES COMPILE_FLAGS -mstackrealign)
+    endif()
 
     # Get rid of the "lib" prefix on archives/DLLs in Windows.
     set_target_properties(smokeqtwebenginewidgets PROPERTIES PREFIX "" IMPORT_PREFIX "")
